objects/Distribution_Group__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <inlineHelpText>Is the group Allowed to see Private Deal Information</inlineHelpText>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribution Group</label>
    <nameField>
        <label>Distribution Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>